# kulibot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.example.json  main.cpp  test.cpp
bot/: Command.hpp  Kulibot.cpp  Kulibot.hpp
commands/: boh.cpp  char.cpp  commands.hpp  ping.cpp  reload.cpp  roll.cpp
tests/: char_test.cpp  config_test.cpp  inventory_test.cpp
tests/testdata/: config.json  inventory.json
tests/testdata/chars/: char1.json  char2.json
utils/: characters.cpp  characters.hpp  config.cpp  config.hpp  inventory.cpp  inventory.hpp
